--- a/ng/package.json
+++ b/ng/package.json
@@ -3,7 +3,10 @@
   "version": "14.00.00",
   "config": {
     "publish_path_ex": "..",
-    "publish_path": "C:\\Projects\\2sxc\\Testing\\sxc-angular\\Website\\Portals\\0\\2sxc\\Template-Angular11\\"
+    "publish_path": "\\\\nasw2\\P\\2sxc 2019b\\Web\\Portals\\0\\2sxc\\App-Catalog-Angular"
+
+
+
   },
   "scripts": {
     "ng": "ng",
