--- a/ng/package.json
+++ b/ng/package.json
@@ -4,9 +4,6 @@
   "config": {
     "publish_path_ex": "..",
     "publish_path": "\\\\nasw2\\P\\2sxc 2019b\\Web\\Portals\\0\\2sxc\\App-Catalog-Angular"
-
-
-
   },
   "scripts": {
     "ng": "ng",
@@ -23,41 +20,41 @@
   "private": true,
   "dependencies": {
     "@2sic.com/sxc-angular": "^14.7.1",
-    "@angular/animations": "^14.2.12",
-    "@angular/common": "^14.2.12",
-    "@angular/compiler": "^14.2.12",
-    "@angular/core": "^14.2.12",
-    "@angular/forms": "^14.2.12",
-    "@angular/material": "^14.2.7",
-    "@angular/platform-browser": "^14.2.12",
-    "@angular/platform-browser-dynamic": "^14.2.12",
-    "@angular/router": "^14.2.12",
-    "moment": "^2.24.0",
-    "rxjs": "~7.5.5",
-    "tslib": "^2.4.0",
-    "zone.js": "~0.11.6"
+    "@angular/animations": "^16.2.7",
+    "@angular/common": "^16.2.7",
+    "@angular/compiler": "^16.2.7",
+    "@angular/core": "^16.2.7",
+    "@angular/forms": "^16.2.7",
+    "@angular/material": "^16.2.6",
+    "@angular/platform-browser": "^16.2.7",
+    "@angular/platform-browser-dynamic": "^16.2.7",
+    "@angular/router": "^16.2.7",
+    "moment": "^2.29.4",
+    "rxjs": "~7.8.1",
+    "tslib": "^2.6.2",
+    "zone.js": "^0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.10",
-    "@angular/cli": "^14.2.10",
-    "@angular/compiler-cli": "^14.2.12",
-    "@angular/language-service": "^14.2.12",
-    "@types/jasmine": "~4.0.3",
-    "@types/jasminewd2": "~2.0.10",
-    "@types/node": "^18.0.3",
+    "@angular-devkit/build-angular": "^16.2.4",
+    "@angular/cli": "^16.2.4",
+    "@angular/compiler-cli": "^16.2.7",
+    "@angular/language-service": "^16.2.7",
+    "@types/jasmine": "~4.3.6",
+    "@types/jasminewd2": "~2.0.11",
+    "@types/node": "^20.8.2",
     "codelyzer": "^6.0.2",
     "cpx": "^1.5.0",
-    "del": "^6.1.1",
-    "jasmine-core": "~4.2.0",
+    "del": "^7.1.0",
+    "jasmine-core": "~5.1.1",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.1",
+    "karma": "~6.4.2",
+    "karma-chrome-launcher": "~3.2.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "^2.0.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "protractor": "~7.0.0",
-    "ts-node": "~10.8.2",
+    "ts-node": "~10.9.1",
     "tslint": "~6.1.0",
-    "typescript": "~4.7.4"
+    "typescript": "~5.1.3"
   }
 }
