--- a/ng/package.json
+++ b/ng/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser": "^17.3.3",
     "@angular/platform-browser-dynamic": "^17.3.3",
     "@angular/router": "^17.3.3",
+    "dayjs": "^1.11.10",
     "moment": "^2.29.4",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
