remove moment, use dayJs

--- a/ng/package.json
+++ b/ng/package.json
@@ -11,8 +11,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "local": "ng serve --public-host localhost:4200 --ssl false",
-    "local-ssl": "ng serve --public-host=localhost:4200 --ssl=true",
+    "local": "ng serve --public-host localhost:4200 --disable-host-check true --ssl false",
+    "local-ssl": "ng serve --public-host=localhost:4200 --disable-host-check=true --ssl=true",
     "watch-api": "node deploy/watch-local-api.js",
     "build-production-local": "ng build --configuration production ",
     "build-to-staging": "ng build --configuration production && node deploy/publish.js staging",
