feat: update to angular 18

--- a/ng/package.json
+++ b/ng/package.json
@@ -10,37 +10,35 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "local": "ng serve --public-host localhost:4200 --disable-host-check true --ssl false",
-    "local-ssl": "ng serve --public-host=localhost:4200 --disable-host-check=true --ssl=true",
+    "local": "ng serve --public-host localhost:4200 --disable-host-check true",
+    "local-ssl": "ng serve --public-host=localhost:4200 --disable-host-check=true --ssl",
     "watch-api": "node deploy/watch-local-api.js",
-    "build-production-local": "ng build --configuration production ",
     "build-to-staging": "ng build --configuration production && node deploy/publish.js staging",
     "build-to-live": "ng build --configuration production && node deploy/publish.js live"
   },
   "private": true,
   "dependencies": {
     "@2sic.com/sxc-angular": "^14.7.1",
-    "@angular/animations": "^17.3.3",
-    "@angular/common": "^17.3.3",
-    "@angular/compiler": "^17.3.3",
-    "@angular/core": "^17.3.3",
-    "@angular/forms": "^17.3.3",
+    "@angular/animations": "^18.2.14",
+    "@angular/common": "^18.2.14",
+    "@angular/compiler": "^18.2.14",
+    "@angular/core": "^18.2.14",
+    "@angular/forms": "^18.2.14",
     "@angular/material": "^16.2.6",
-    "@angular/platform-browser": "^17.3.3",
-    "@angular/platform-browser-dynamic": "^17.3.3",
-    "@angular/router": "^17.3.3",
+    "@angular/platform-browser": "^18.2.14",
+    "@angular/platform-browser-dynamic": "^18.2.14",
+    "@angular/router": "^18.2.14",
     "dayjs": "^1.11.10",
     "moment": "^2.29.4",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
-    "zone.js": "^0.14.0"
+    "zone.js": "^0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.3",
-    "@angular/cli": "^17.3.3",
-    "@angular/compiler-cli": "^17.3.3",
-    "@angular/language-service": "^17.3.3",
+    "@angular-devkit/build-angular": "^18.2.21",
+    "@angular/cli": "^18.2.21",
+    "@angular/compiler-cli": "^18.2.14",
+    "@angular/language-service": "^18.2.14",
     "@types/jasmine": "~4.3.6",
     "@types/jasminewd2": "~2.0.11",
     "@types/node": "^20.8.2",
