--- a/ng/package.json
+++ b/ng/package.json
@@ -19,15 +19,15 @@
   "private": true,
   "dependencies": {
     "@2sic.com/sxc-angular": "^14.7.1",
-    "@angular/animations": "^19.2.15",
-    "@angular/common": "^19.2.15",
-    "@angular/compiler": "^19.2.15",
-    "@angular/core": "^19.2.15",
-    "@angular/forms": "^19.2.15",
+    "@angular/animations": "^20.3.13",
+    "@angular/common": "^20.3.13",
+    "@angular/compiler": "^20.3.13",
+    "@angular/core": "^20.3.13",
+    "@angular/forms": "^20.3.13",
     "@angular/material": "^19.2.19",
-    "@angular/platform-browser": "^19.2.15",
-    "@angular/platform-browser-dynamic": "^19.2.15",
-    "@angular/router": "^19.2.15",
+    "@angular/platform-browser": "^20.3.13",
+    "@angular/platform-browser-dynamic": "^20.3.13",
+    "@angular/router": "^20.3.13",
     "dayjs": "^1.11.10",
     "moment": "^2.29.4",
     "rxjs": "~7.8.1",
@@ -35,10 +35,10 @@
     "zone.js": "^0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.19",
-    "@angular/cli": "^19.2.19",
-    "@angular/compiler-cli": "^19.2.15",
-    "@angular/language-service": "^19.2.15",
+    "@angular/build": "^20.3.12",
+    "@angular/cli": "^20.3.12",
+    "@angular/compiler-cli": "^20.3.13",
+    "@angular/language-service": "^20.3.13",
     "@types/jasmine": "~4.3.6",
     "@types/jasminewd2": "~2.0.11",
     "@types/node": "^20.8.2",
