--- a/ng/package.json
+++ b/ng/package.json
@@ -35,7 +35,7 @@
     "zone.js": "^0.15.1"
   },
   "devDependencies": {
-    "@angular/build": "^20.3.12",
+    "@angular-devkit/build-angular": "^20.3.12",
     "@angular/cli": "^20.3.12",
     "@angular/compiler-cli": "^20.3.13",
     "@angular/language-service": "^20.3.13",
